--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.7.0"
+    "joi": "^17.13.1",
+    "mongodb": "^6.7.0",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
